--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,141 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
+    font-size: 1rem;
+    color: #fff;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #050505;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
+
+body.home {
+    overflow: hidden;
+}
+
+.Slider {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.Slider img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.Slider .slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.Slider .slide:not(.is-active) > * {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.Slider .slide-image {
+    position: absolute;
+    width: 600px;
+    height: 400px;
+}
+
+.Slider .slide-image img {
+    -webkit-user-drag: none;
+    user-select: none;
+}
+
+.Slider .slide-title {
+    position: absolute;
+    white-space: nowrap;
+    z-index: 2;
+}
+
+.Slider .slide-title h1 {
+    margin: 0 0 1rem 0;
+}
+
+.Slide .slide-title .description {
+    font-size: 0.85rem;
+}
+
+.Slider .slide-title a {
+    display: inline-block;
+    color: inherit;
+    margin-top: 1.5rem;
+    text-decoration: underline;
+}
+
+.Slider .slide-background {
+    position: absolute;
+    width: 1000px;
+    height: 600px;
+    z-index: -1;
+}
+
+.Slider .slide-background::after {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.65);
+}
+
+.Slider .slider-arrow {
+    position: absolute;
+    left: calc(50% - 20px);
+    bottom: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    z-index: 25;
+    cursor: pointer;
+}
+
+.Slider .slider-arrow .arrow svg {
+    display: block;
+    width: 14px;
+}
+
+.Slider .slider-arrow .progress {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    pointer-events: none;
+}
+
+.Slider .slider-arrow .progress svg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    transform: rotate(-90deg);
+}
+
+
+@media (max-width: 1200px) {
+    .Slider .slide-image {
+        width: 450px;
+        height: 270px;
+    }
+
+    .Slider .slide-background {
+        width: 800px;
+        height: 500px;
+    }
 }
